# voice-to-org

./: Cargo.toml  default.nix  flake.nix
src/: dir_queue.rs  interpret.rs  main.rs  transcribe.rs
